syntax = "proto2";
package client;


//微信登录
message STThirdPartyWXLoginReq //Public|NoCookie
{
	required string code = 1; //微信登录的code
}

message STThirdPartyWXLoginRsp
{
	required string UserKey = 1; //用户cookie
	optional string UserId = 2; //用户id
	optional string NickName = 3; //昵称
	optional string Url = 4; //头像url
	optional sint64 LastTime = 5; //最近登录时间,单位unix时间戳
	optional sint32 ChargeNum = 6; //充值金额，单位分
	optional string WxOpenID = 7; //微信openid
	optional sint64 VipDeadLine = 8; //vip过期时间
	optional bool bVip = 9; //vip当前是否生效
	optional bool PayControl = 10; //支付开关
}


//获取自己的信息
message STGetMyInfoReq //Public
{
}

message STGetMyInfoRsp
{
	optional string UserId = 1; //用户id
	optional string NickName = 2; //昵称
	optional string Url = 3; //头像url
	optional sint64 LastTime = 4; //最近登录时间,单位unix时间戳
	optional sint32 ChargeNum = 5; //充值级别，0为未充值过
	optional string WxOpenID = 6; //微信openid
	optional sint64 VipDeadLine = 7; //vip过期时间
	optional bool bVip = 8; //vip当前是否生效
}
